--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,6 @@ steps:
     location: 'Central US'
     templateLocation: 'Linked artifact'
     csmFile: 'azuredeploy.json'
-    overrideParameters: '-projectName mgdsoft10 -storageAccountName=storageMgd10'
+    overrideParameters: '-projectName mgdsoft10 -storageAccountName storageMgd10'
     deploymentMode: 'Incremental'
     deploymentName: 'DeployPipelineTemplate'
